# WinDevicesLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  Directory.Build.props  README.md  build-and-test.cmd  coverage.cmd  install.cmd
.claude/: settings.local.json
.github/actions/build-and-test/: action.yml
.github/workflows/: build-test.yaml  increment-version.yaml
cmake/: WinDevicesConfig.cmake.in
dotnet/TestConsole/: DirectCppTest.cs  MassStorageTest.cs  Program.cs  WinDevices.TestConsole.csproj
dotnet/WinDevicesNet/: DeviceClassGuids.cs  DeviceInfo.cs  DeviceManager.cs  EXAMPLES.md  IsExternalInit.cs  NativeMethods.cs  QUICKSTART.md  README.md  WinDevicesException.cs  WinDevicesNet.csproj
dotnet/WinDevicesNet.Tests/: DeviceInfoTests.cs  DeviceManagerTests.cs  IntegrationTests.cs  WinDevicesNet.Tests.csproj
include/WinDevices/: CrtDebug.h  DevInfoData.h  DeviceClassGuids.h  DeviceCommunication.h  DeviceEnumerator.h  DeviceInfo.h  DeviceProperty.h  DeviceResultantInfo.h  DevicesManager.h  Exceptions.h  HubConnectionInfo.h  HubNodeCapabilitiesEx.h  HubNodeInfo.h  HubNodeInfoEx.h  HubPortInfo.h  IDeviceCommunication.h  IDeviceEnumerator.h  UsbClassCodes.h  UsbDescriptorParser.h  UsbDeviceClassInfo.h  UsbDeviceDescriptorInfo.h  UsbHostController.h  UsbHub.h  UsbPortInfo.h  UsbVendorList.h  UtilConvert.h  Version.h.in  pch.h  usbdesc.h
scripts/: generate_usb_vendor_list.py
src/WinDevices/: CMakeLists.txt  DevInfoData.cpp  DeviceCommunication.cpp  DeviceEnumerator.cpp  DeviceInfo.cpp  DeviceProperty.cpp  DeviceResultantInfo.cpp  DevicesManager.cpp  HubConnectionInfo.cpp  HubNodeCapabilities.cpp  HubNodeInfo.cpp  HubNodeInfoEx.cpp  HubPortInfo.cpp  UsbDescriptorParser.cpp  UsbDeviceClassInfo.cpp  UsbDeviceDescriptorInfo.cpp  UsbHostController.cpp  UsbHub.cpp  UsbPortInfo.cpp  UsbVendorList.cpp  UtilConvert.cpp  WinDevicesAPI.cpp  WinDevicesAPI.h
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  DeviceClassEnumerationE2ETests.cpp  DeviceEnumerationE2ETests.cpp  UsbMassStorageE2ETests.cpp
tests/unit/: CMakeLists.txt  DeviceCommunicationTests.cpp  DeviceEnumeratorTests.cpp  DevicesManagerTests.cpp  PropertyBasedTests.cpp  TestMain.cpp  ThreadSafetyTests.cpp  UsbHubMockTests.cpp  UtilConvertTests.cpp
tests/unit/mocks/: MockDeviceCommunication.h
